@@ -32,3 +32,4 @@
   - added GALLERY_DISABLE_EXIF_WARNINGS
   - gallery templates: bugfixes, added mobile_view variable
   - generate XHTML in FileWiki::Plugin::POD
+  - Template::Plugin::FileWiki->PageTree() generates class="collapse"
